# TradeEco

./: .gitignore  README.md  WARP.md  requirements.txt
.github/workflows/: ci.yml
config/: egress_allowlist.txt  exit_policy.toml  instruments.toml  policy.toml
hq/: Cargo.toml  siren.py
hq/config/: egress_allowlist.txt  exit_policy.toml  instruments.toml  policy.toml  portfolio.json  symbol_map.toml
hq/connectivity/go/: main.go
hq/crates/alerts/: Cargo.toml
hq/crates/alerts/src/: lib.rs
hq/crates/alphascout/: Cargo.toml
hq/crates/alphascout/src/: lib.rs
hq/crates/api/: Cargo.toml
hq/crates/api/src/: lib.rs
hq/crates/broker_mock/: Cargo.toml
hq/crates/broker_mock/src/: lib.rs
hq/crates/brokergate/: Cargo.toml
hq/crates/brokergate/src/: lib.rs
hq/crates/guardian/: Cargo.toml
hq/crates/guardian/logs/: audit.jsonl
hq/crates/guardian/src/: lib.rs
hq/crates/hq/: Cargo.toml
hq/crates/hq/src/: main.rs
hq/crates/ir/: Cargo.toml
hq/crates/ir/src/: lib.rs
hq/crates/ledger/: Cargo.toml
hq/crates/ledger/src/: lib.rs
hq/crates/meta/: Cargo.toml
hq/crates/meta/src/: lib.rs
hq/crates/pathfinder/: Cargo.toml
hq/crates/pathfinder/src/: lib.rs  ml.rs
hq/crates/portfolio/: Cargo.toml
hq/crates/portfolio/src/: lib.rs
hq/crates/regime/: Cargo.toml
hq/crates/regime/src/: lib.rs  ml.rs
hq/crates/risksmith/: Cargo.toml
hq/crates/risksmith/src/: lib.rs
hq/crates/sentiment/: Cargo.toml
hq/crates/sentiment/src/: lib.rs  ml.rs
hq/crates/sentinel/: Cargo.toml
hq/crates/sentinel/src/: collectors.rs  lib.rs
hq/crates/tca/: Cargo.toml
hq/crates/tca/src/: lib.rs
hq/data/: dates_NAS100.csv  dates_USDJPY.csv  dates_USDMXN.csv  dates_XAUUSD.csv  pair_config.json  prices_AUDUSD.csv  prices_GBPUSD.csv  prices_NAS100.csv  prices_USDCAD.csv  prices_USDJPY.csv  prices_USDMXN.csv  prices_XAUUSD.csv  sample_dates.csv  sample_prices.csv
hq/docs/: CANDLESTICKS.md  CMD_MANUAL.md  EXIT_STRATEGIES.md  SENTINEL_ORACLE.md  TRADE_ECO_COMMANDS.md
hq/logs/: audit.jsonl  sentinel_seen.jsonl  tca.jsonl  tca.jsonl.bak  trade_ledger.db  trade_ledger_default.db  trade_ledger_live_oanda.db
hq/models/: meta_weights.json
src/auto_trader/: cg_model_adapter.py  main.py
tools/mt4/: TradeEcoBridge.mq4
