[package]
name = "brokergate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
api = { path = "../api" }
ir = { path = "../ir" }
guardian = { path = "../guardian" }
ledger = { path = "../ledger" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
once_cell = "1.19"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
