[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[features]
default = []
alerts = ["dep:alerts"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
api = { path = "../api" }
ir = { path = "../ir" }
guardian = { path = "../guardian" }
alerts = { path = "../alerts", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
rss = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "alloc"] }
once_cell = "1.19"
sha2 = "0.10"
